# poi_trails

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json  sw.js
.github/: FUNDING.yml
.github/workflows/: deploy.yml
src/: app.rs  camera.rs  delay.rs  fullscreen.rs  gpu.rs  main.rs  record.rs  trails.rs  ui.rs  video_frame.rs
