[package]
name = "poi_trails"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.35"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["glow", "persistence"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "Element",
    "Event",
    "EventTarget",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "Document",
    "Window",
    "DomException",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlFramebuffer",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
] }
console_error_panic_hook = "0.1"
console_log = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["glow", "persistence", "x11", "wayland"] }
env_logger = "0.11"

[profile.release]
opt-level = 2
lto = true
